--- a/index.html
+++ b/index.html
@@ -48,6 +48,75 @@
     </header>
 
 
+    <section class="hero__section">
+        <div class="hero-slider">
+            <div class="slide-item">
+                <a class="fresco" href="img/1.jpg" data-fresco-group="projects">
+                    <img src="img/1.jpg" alt="">
+                </a>
+            </div>
+            <div class="slide-item">
+                <a class="fresco" href="img/2.jpg" data-fresco-group="projects">
+                    <img src="img/2.jpg" alt="">
+                </a>
+            </div>
+            <div class="slide-item">
+                <a class="fresco" href="img/3.jpg" data-fresco-group="projects">
+                    <img src="img/3.jpg" alt="">
+                </a>
+            </div>
+            <div class="slide-item">
+                <a class="fresco" href="img/4.jpg" data-fresco-group="projects">
+                    <img src="img/4.jpg" alt="">
+                </a>
+            </div>
+            <div class="slide-item">
+                <a class="fresco" href="img/5.jpg" data-fresco-group="projects">
+                    <img src="img/5.jpg" alt="">
+                </a>
+            </div>
+            <div class="slide-item">
+                <a class="fresco" href="img/6.jpg" data-fresco-group="projects">
+                    <img src="img/6.jpg" alt="">
+                </a>
+            </div>
+            <div class="slide-item">
+                <a class="fresco" href="img/7.jpg" data-fresco-group="projects">
+                    <img src="img/7.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="hero-text-slider">
+            <div class="text-item">
+                <h2>Nature</h2>
+                <p>Photography</p>
+            </div>
+            <div class="text-item">
+                <h2>Red Heartbeat</h2>
+                <p>Photography</p>
+            </div>
+            <div class="text-item">
+                <h2>Blue Dreem</h2>
+                <p>Photography</p>
+            </div>
+            <div class="text-item">
+                <h2>Christian Church</h2>
+                <p>Photography</p>
+            </div>
+            <div class="text-item">
+                <h2>Red Darkness</h2>
+                <p>Photography</p>
+            </div>
+            <div class="text-item">
+                <h2>Beauty with Brain</h2>
+                <p>Photography</p>
+            </div>
+            <div class="text-item">
+                <h2>Remarkable</h2>
+                <p>Photography</p>
+            </div>
+        </div>
+    </section>
 
 
     <footer class="footer__section">
@@ -73,6 +142,11 @@
             </form>
         </div>
     </div>
+
+    <script src="js/vendor/jquery-3.2.1.min.js"></script>
+    <script src="js/jquery.slicknav.min.js"></script>
+    <script src="js/fresco.min.js"></script>
+    <script src="js/slick.min.js"></script>
 
 </body>
 
