--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <meta name="keywords" content="photo, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/slick.css" />
+    <link rel="stylesheet" href="./styles//font-awesome.min.css">
+<link rel="stylesheet" href="./styles/slicknav.min.css">
+<link rel="stylesheet" href="./styles/fresco.css">
 </head>
 
 <body>
@@ -124,9 +128,7 @@
 
             <div class="footer__copyright__text">
                 <p>Copyright &copy;
-                    <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is
-                    made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="#"
-                        target="_blank">Colorlib</a>
+                    <script>document.write(new Date().getFullYear());</script> All rights reserved
                 </p>
             </div>
 
@@ -143,10 +145,11 @@
         </div>
     </div>
 
-    <script src="js/vendor/jquery-3.2.1.min.js"></script>
-    <script src="js/jquery.slicknav.min.js"></script>
-    <script src="js/fresco.min.js"></script>
-    <script src="js/slick.min.js"></script>
+    <script src="./js/js.js"></script>
+    <script src="./js/jquery.slicknav.min.js"></script>
+    <script src="./js/fresco.min.js"></script>
+    <script src="./js/slick.min.js"></script>
+    <script src="./js/main.js"></script>
 
 </body>
 
